[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/hud/money_display/MoneyDisplay.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud/money_display/gold.png" type="Texture" id=2]
[ext_resource path="res://fonts/nokia/mini-nokia-8.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/hud/money_display/emerald.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "gold"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GoldAmount:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}

[node name="MoneyDisplay" type="Node2D"]

script = ExtResource( 1 )

[node name="Gold" type="Sprite" parent="." index="0"]

position = Vector2( 10, 16 )
texture = ExtResource( 2 )

[node name="GoldAmount" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 12.0
margin_right = 71.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 34, 5 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.784314, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9999999999"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Emerald" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 10, 34 )
texture = ExtResource( 4 )

[node name="EmeraldAmount" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.784314, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9999999999"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="GoldAnim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/gold = SubResource( 1 )
blend_times = [  ]

[node name="EmeraldAnim" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]


